GRD: Use G1GC for IDEs run from Gradle
Since G1GC is a default for all IDEs

[skip ci]